feat: s3 custom endpoint and path style

--- a/.env.example
+++ b/.env.example
@@ -16,10 +16,12 @@ CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_R2_ACCESS_ID=
 CLOUDFLARE_R2_ACCESS_KEY=
 
+S3_ENDPOINT=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 S3_BUCKET=
+S3_USE_PATH_STYLE=false
 
 MAILGUN_DOMAIN=
 MAILGUN_API_KEY=
